# custom-lambda-rs

./: Cargo.toml
src/: main.rs
