[package]
name = "custom-lambda-rs"
version = "0.1.0"
authors = ["Ryo Oki"]

[dependencies]
lambda_runtime_client = "0.1"
lambda_runtime = "0.1"
data-encoding = "2.1.0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
regex = "0.2"
lazy_static = "^1"
chrono = "0.4"
rayon = "^1"